<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    tools:context=".HistoryFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical"
        android:paddingTop="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/history_title"
            android:textColor="@color/text_primary_dark"
            android:textSize="34sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/historyEmptyText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/history_empty"
            android:textColor="@color/text_light"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/historyContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="vertical" />

        <Button
            android:id="@+id/backFromHistoryButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_button_primary"
            android:text="@string/back_to_home_button"
            android:textAllCaps="false"
            android:textColor="@color/text_primary_dark" />
    </LinearLayout>
</ScrollView>
